[package]
name = "tx_processor"
version = "1.0.0"
authors = ["Jan <patomil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.2.0"
csv = "1.1.3"
serde = { version = "1", features = ["derive"] }
exitcode = "1.1.2"

[dev-dependencies]
assert_cmd = "0.10"
